# vscode-autocomplete-problem

./: Cargo.toml
src/: main.rs
